ensure screen sizes correctly on mobile

--- a/src-frontend/app/app.component.css
+++ b/src-frontend/app/app.component.css
@@ -4,7 +4,7 @@
 .AppContent {
     margin: 0 auto;
     padding: 20px 40px 40px 40px;
-    width: 800px;
+    width: 720px;
 }
 
 .AppContent-repoName {
